--- a/code-along.css
+++ b/code-along.css
@@ -45,10 +45,11 @@
 }
 
 @keyframes sale-bar {
-  0% { background-color: lightgreen; width: 450px}
+  0% { background-color: lightgreen; width: 450px }
   25% { background-color: gold; width: 375px }
   50% { background-color: salmon; width: 250px }
-  75% { background-color: #FF033E; width: 125x }
-  100% { background-color: crimson; width: 10px }
-}
+  75% { background-color: #FF033E; width: 125x; border-radius: 0; transform: scale(1) }
+  100% { background-color: crimson; width: 10px; border-radius: 100%; transform: scale(0) }
+}                  
+
 
